cib/infra-fe/cib-prod/it-admin-web/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    provider: ngkube
    group: it-admin
  name: it-admin-web
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    haproxy.router.openshift.io/timeout: 120s
    
spec:
  host: it-admin-production.apps.ocpprod-adc.me.alinma.internal
  path: /
  to:
    kind: Service
    name: it-admin-web
  port:
    targetPort: 8080
  tls:
    termination: edge
